core/tests/ui/store/nested_ref_legacy_attr_rejected.stderr
error: cannot find attribute `store` in this scope
  --> tests/ui/store/nested_ref_legacy_attr_rejected.rs:14:7
   |
14 |     #[store(ref)]
   |       ^^^^^
